Closed Bug 1465739 Opened 6 years ago Closed 6 years ago

Mac coverage builds hitting crash in LateWriteChecks during tests

Categories

(Testing :: Code Coverage, defect)

defect
Not set
normal

Tracking

(firefox62 fixed)

RESOLVED FIXED
mozilla62
Tracking Status
firefox62 --- fixed

People

(Reporter: marco, Assigned: marco)

References

(Blocks 1 open bug)

Details

Attachments

(1 file)

> 07:42:16 INFO - GECKO(1896) | Hit MOZ_CRASH() at /builds/worker/workspace/build/src/xpcom/build/LateWriteChecks.cpp:118 Same as bug 1416235, but for Mac.
Attached patch PatchSplinter Review
Attachment #8982168 - Flags: review?(nfroyd)
Attachment #8982168 - Flags: review?(nfroyd) → review+
Pushed by mcastelluccio@mozilla.com: https://hg.mozilla.org/integration/mozilla-inbound/rev/77382cc4a9fa Don't crash when there are late writes in all coverage builds. r=froydnj
Status: ASSIGNED → RESOLVED
Closed: 6 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla62
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: