Bug 1465739 - Don't crash when there are late writes in all coverage builds. r=froydnj

--HG--
extra : rebase_source : 214929e40b4275b7deed6dc1f51280e3b316fba2